[cmake] Fix CMake merging issues

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -17,7 +17,7 @@ add_mc_rtc_utils(mc_bin_to_flat mc_bin_to_flat.cpp mc_bin_to_flat_main.cpp)
 
 add_mc_rtc_utils(mc_bin_perf mc_bin_perf.cpp)
 
-add_executable(mc_old_bin_to_flat mc_old_bin_to_flat.cpp)
+add_mc_rtc_utils(mc_old_bin_to_flat mc_old_bin_to_flat.cpp)
 
 if(${ROSCPP_FOUND})
   add_mc_rtc_utils(mc_bin_to_rosbag mc_bin_to_rosbag.cpp mc_bin_to_rosbag_main.cpp)
