[observers] Load observers from libraries

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -1,9 +1,33 @@
 {
   // What robot is being controlled
-  "MainRobot" : "JVRC-1",
+  "MainRobot" : "HRP4Comanoid",
 
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP", "BCISelfInteract"],
   "Enabled"   : ["CoM"],
+  "EnabledObservers": ["BodySensor", "FloatingBasePos", "FloatingBasePosVel", "EncoderVelocity"],
+
+  "Observers":
+  {
+    "BodySensor":
+    {
+      "UpdateFloatingBase": true,
+      "FloatingBaseSensorName": "FloatingBase",
+      "UpdateEncoderPosition": true,
+      "UpdateEncoderVelocity": false
+    }
+  },
+
+
+   "UDP":
+   {
+     "IgnoredJoints":
+     {
+       "joints": ["R_HAND_J0", "R_HAND_J1", "L_HAND_J0", "L_HAND_J1", "L_WRIST_R"],
+       // When true, halfsitting posture will be used, else the encoder
+       // value at initialization
+       "halfsitting": true
+     }
+   },
 
   // If multiple controllers are enable, default can be used to decide which
   // will be enabled first, this defaults to the first controller enabled
@@ -12,12 +36,12 @@
   // If this option is set to true, mc_rtc will handle the update of the real
   // robot itself, you might want to set to false to test new state estimation
   // features
-  // "UpdateReal" : true,
+  "UpdateReal" : true,
 
   // If this option is set to true, the sensor input for position and
   // orientation will be used to update the real robot's free flyer,
   // otherwise, the controller state is used
-  // "UpdateRealFromSensors" : false,
+  "UpdateRealFromSensors" : false,
 
   // If "UpdateRealFromSensors" is set to true, you can choose which BodySensor to use
   // for updating the floating base attitude. If not set, the default sensor for the robot will be
@@ -106,7 +130,7 @@
 
   // The following option change the verbosity of the controller and robot
   // loader
-  "VerboseLoader" : false,
+  "VerboseLoader" : true,
 
   // The following option is used to disable controller/robot creation sandboxing
   // This option only affects Linux
