[observers] Provide access to control robot

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -10,10 +10,15 @@
   {
     "BodySensor":
     {
-      "UpdateFloatingBase": true,
+      "UpdateFloatingBaseFromSensor": false,
+      "UpdateFloatingBaseFromControl": false,
       "FloatingBaseSensorName": "FloatingBase",
-      "UpdateEncoderPosition": true,
-      "UpdateEncoderVelocity": false
+
+      "UpdateEncoderPositionFromSensor": true,
+      "UpdateEncoderVelocityFromSensor": false,
+
+      "UpdateEncoderPositionFromControl": false,
+      "UpdateEncoderVelocityFromControl": false
     }
   },
 
