[observers] Implement encoder observer
- Compute encoder values with finite differences
- Update the real robot from either control, sensor or estimated values

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -4,10 +4,19 @@
 
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP", "BCISelfInteract"],
   "Enabled"   : ["CoM"],
-  "EnabledObservers": ["BodySensor", "FloatingBasePos", "FloatingBasePosVel", "EncoderVelocity"],
+  "EnabledObservers": ["BodySensor", "FloatingBasePos", "FloatingBasePosVel", "Encoder"],
 
   "Observers":
   {
+    "Encoder":
+    {
+      "PositionFromSensor": true,
+      "VelocityFromControl": false,
+      "VelocityFromSensor": false,
+      "VelocityFromEstimation": true,
+      "LogEstimation" : true
+    },
+
     "BodySensor":
     {
       "UpdateFloatingBaseFromSensor": false,
