[observers] Clean settings for Encoder observer

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -10,11 +10,10 @@
   {
     "Encoder":
     {
-      "PositionFromSensor": true,
-      "VelocityFromControl": false,
-      "VelocityFromSensor": false,
-      "VelocityFromEstimation": true,
-      "LogEstimation" : true
+      // Valid values are ["estimator", "control"]
+      "UpdatePosition": "estimator",
+      "UpdateVelocity": "estimator",
+      "Log" : true
     },
 
     "BodySensor":
