[observers] Clean and document observers

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -4,62 +4,40 @@
 
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP", "BCISelfInteract"],
   "Enabled"   : ["CoM"],
-  "EnabledObservers": ["BodySensor", "FloatingBasePos", "FloatingBasePosVel", "Encoder"],
 
+  // Load and run state observers.
+  // Order matters here, estimators will be run after each other.
+  // Only the estimators in the "UpdateObservers" list (see below) will affect
+  // the state of the real robot. The other estimators will only be run and logged, such that
+  // They may be used for comparison purposes.
+  //
+  // Available estimators in mc_rtc are:
+  // - "Encoder" : Estimate encoder position from sensor and velocity by finite differences
+  // - "BodySensor" : Uses a BodySensor to compute the state of the floating base. This estimator will
+  // typically be used to obtained groundtruth information (e.g the FloatingBase body sensor contains the groundtruth floating base state when running in choreonoid)
+  // - KinematicInertial : Estimates the position and orientation of the floating base from the IMU orientation and assumed contacts. Note that this estimator requires to manually set the leftFootRatio  parameter to specify its anchor point, the default value is configured in-between the feet and is suitable for double-support only.
+  "EnabledObservers": ["Encoder", "BodySensor"],
+  // Update the real robot from these estimators
+  "UpdateObservers": ["Encoder", "BodySensor"],
+
+  // Specific configuration for each observer
   "Observers":
   {
     "Encoder":
     {
       // Valid values are ["estimator", "control"]
-      "UpdatePosition": "estimator",
-      "UpdateVelocity": "estimator",
+      "UpdatePositionFrom": "estimator",
+      "UpdateVelocityFrom": "estimator",
       "Log" : true
     },
 
     "BodySensor":
     {
-      "UpdateFloatingBaseFromSensor": false,
-      "UpdateFloatingBaseFromControl": false,
-      "FloatingBaseSensorName": "FloatingBase",
-
-      "UpdateEncoderPositionFromSensor": true,
-      "UpdateEncoderVelocityFromSensor": false,
-
-      "UpdateEncoderPositionFromControl": false,
-      "UpdateEncoderVelocityFromControl": false
+      // Valid entries are ["control", "estimator"]
+      "UpdateFrom": "estimator",
+      "FloatingBaseSensor": "FloatingBase"
     }
   },
-
-
-   "UDP":
-   {
-     "IgnoredJoints":
-     {
-       "joints": ["R_HAND_J0", "R_HAND_J1", "L_HAND_J0", "L_HAND_J1", "L_WRIST_R"],
-       // When true, halfsitting posture will be used, else the encoder
-       // value at initialization
-       "halfsitting": true
-     }
-   },
-
-  // If multiple controllers are enable, default can be used to decide which
-  // will be enabled first, this defaults to the first controller enabled
-  //"Default"   : "Body6d",
-
-  // If this option is set to true, mc_rtc will handle the update of the real
-  // robot itself, you might want to set to false to test new state estimation
-  // features
-  "UpdateReal" : true,
-
-  // If this option is set to true, the sensor input for position and
-  // orientation will be used to update the real robot's free flyer,
-  // otherwise, the controller state is used
-  "UpdateRealFromSensors" : false,
-
-  // If "UpdateRealFromSensors" is set to true, you can choose which BodySensor to use
-  // for updating the floating base attitude. If not set, the default sensor for the robot will be
-  // used.
-  // "UpdateRealSensorName": "FloatingBase",
 
   // Publish the state of the controlled robot (ROS)
   "PublishControlState" : true,
@@ -156,6 +134,9 @@
   //"ControllerModulePaths" : ["/one/path/to/controller/", "/another/path/"]
   //"RobotModulePath" : "/a/single/path/to/robot/directory/"
   //"RobotModulePaths" : ["/one/path/to/robot/", "/another/path/"]
+  //"RobotModulePath" : "/a/single/path/to/robot/directory/"
+  //"RobotModulePaths" : ["/one/path/to/robot/", "/another/path/"]
+  //"ObserverModulePaths" : ["/one/path/to/observer/", "/another/path/"]
 
   // The following options are used to clear the default loading path
   // for controllers and robots respectively
