--- a/src/mc_observers/CMakeLists.txt
+++ b/src/mc_observers/CMakeLists.txt
@@ -10,7 +10,7 @@ endmacro()
 
 add_observer(EncoderObserver)
 add_observer(BodySensorObserver)
-add_observer(FloatingBasePosObserver)
-add_observer(FloatingBasePosVelObserver)
-target_link_libraries(FloatingBasePosVelObserver PUBLIC FloatingBasePosObserver)
-set_target_properties(FloatingBasePosVelObserver PROPERTIES INSTALL_RPATH ${MC_OBSERVERS_INSTALL_PREFIX})
+add_observer(KinematicInertialPoseObserver)
+add_observer(KinematicInertialObserver)
+target_link_libraries(KinematicInertialObserver PUBLIC KinematicInertialPoseObserver)
+set_target_properties(KinematicInertialObserver PROPERTIES INSTALL_RPATH ${MC_OBSERVERS_INSTALL_PREFIX})
