--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,15 +35,17 @@ install_mc_rtc_lib(mc_rtc_loader)
 
 set(mc_rtc_utils_SRC
   mc_rtc/Configuration.cpp
-  mc_rtc/MessagePackBuilder.cpp
-  mc_rtc/Logger.cpp
   mc_rtc/FlatLog.cpp
+  mc_rtc/iterate_binary_log.cpp
+  mc_rtc/Logger.cpp
+  mc_rtc/MessagePackBuilder.cpp
 )
 
 set(mc_rtc_utils_HDR
   ../include/mc_rtc/Configuration.h
   ../include/mc_rtc/MessagePackBuilder.h
   ../include/mc_rtc/log/FlatLog.h
+  ../include/mc_rtc/log/iterate_binary_log.h
   ../include/mc_rtc/log/Logger.h
   ../include/mc_rtc/utils.h
   ../include/mc_rtc/utils_api.h
