[observers] Remove changes introduced by mistake

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -1,6 +1,6 @@
 {
   // What robot is being controlled
-  "MainRobot" : "HRP4Comanoid",
+  "MainRobot" : "JVRC-1",
 
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP", "BCISelfInteract"],
   "Enabled"   : ["CoM"],
@@ -132,8 +132,6 @@
   // The paths added by this option are added to the default path
   //"ControllerModulePaths" : "/a/single/path/to/controller/directory/"
   //"ControllerModulePaths" : ["/one/path/to/controller/", "/another/path/"]
-  //"RobotModulePath" : "/a/single/path/to/robot/directory/"
-  //"RobotModulePaths" : ["/one/path/to/robot/", "/another/path/"]
   //"RobotModulePath" : "/a/single/path/to/robot/directory/"
   //"RobotModulePaths" : ["/one/path/to/robot/", "/another/path/"]
   //"ObserverModulePaths" : ["/one/path/to/observer/", "/another/path/"]
