--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,6 @@ Build-Depends: debhelper (>= 9),
                libboost-timer-dev,
                libtasks-qld-dev|libtasks-dev,
                libeigen-quadprog-dev,
-               libmc-rbdyn-urdf-dev,
                libgeos++-dev,
                mc-rtc-data,
                python,
@@ -35,8 +34,6 @@ Build-Depends: debhelper (>= 9),
                cython3,
                python-tasks,
                python3-tasks,
-               python-mc-rbdyn-urdf,
-               python3-mc-rbdyn-urdf,
                libnanomsg-dev,
                libhpp-spline-dev,
                libyaml-cpp-dev,
@@ -59,7 +56,6 @@ Depends: cmake,
          libboost-timer-dev,
          libtasks-qld-dev|libtasks-dev,
          libeigen-quadprog-dev,
-         libmc-rbdyn-urdf-dev,
          libgeos++-dev,
          libnanomsg-dev,
          libhpp-spline-dev,
@@ -126,7 +122,7 @@ Description: mc-rtc - API documentation
 Package: python-mc-rtc
 Section: python
 Architecture: any
-Depends: ${python:Depends}, ${misc:Depends}, ${shlibs:Depends}, python-all, python-tasks, python-mc-rbdyn-urdf
+Depends: ${Python:Depends}, ${misc:Depends}, ${shlibs:Depends}, python-all, python-tasks
 Description: mc_rtc - Python bindings
  mc_rtc is an interface for simulated and real robotic systems suitable for
  real-time control.  It provides programmers with a simple interface to build
@@ -138,7 +134,7 @@ Description: mc_rtc - Python bindings
 Package: python3-mc-rtc
 Section: python
 Architecture: any
-Depends: ${python3:Depends}, ${misc:Depends}, ${shlibs:Depends}, python3-all, python3-tasks, python3-mc-rbdyn-urdf
+Depends: ${Python3:Depends}, ${misc:Depends}, ${shlibs:Depends}, python3-all, python3-tasks
 Description: mc_rtc - Python bindings
  mc_rtc is an interface for simulated and real robotic systems suitable for
  real-time control.  It provides programmers with a simple interface to build
