--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,5 +149,6 @@ install(
 # Extra macros for mc_rtc
 install(FILES "src/mc_rtcMacros.cmake"
         DESTINATION "${CONFIG_INSTALL_DIR}")
-file(APPEND "${CMAKE_CURRENT_BINARY_DIR}/generated/mc_rtcConfig.cmake" "include(\"\${CMAKE_CURRENT_LIST_DIR}/mc_rtcMacros.cmake\")\n")
-file(APPEND "${CMAKE_CURRENT_BINARY_DIR}/generated/mc_rtcConfig.cmake" "include(\"\${CMAKE_CURRENT_LIST_DIR}/mc_rtc_fsm_states.cmake\")\n")
+set(PACKAGE_EXTRA_MACROS "${PACKAGE_EXTRA_MACROS}
+include(\"\${CMAKE_CURRENT_LIST_DIR}/mc_rtcMacros.cmake\")
+include(\"\${CMAKE_CURRENT_LIST_DIR}/mc_rtc_fsm_states.cmake\")")
