[cmake] Update submodule
* Use BUILD_TESTING rather than DISABLE_TESTS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,6 @@ if("${CMAKE_CXX_FLAGS}" MATCHES "--coverage")
 endif()
 
 option(BUILD_CONTROLLER_SAMPLES "Build sample controllers in the project" ON)
-option(DISABLE_TESTS "Disable unit tests" OFF)
 option(DISABLE_CONTROLLER_TESTS "Disable controller unit tests" OFF)
 option(DISABLE_ROBOT_TESTS "Disable RobotModule unit tests" OFF)
 
@@ -118,7 +117,7 @@ endif(MSVC)
 add_subdirectory(CMakeModules)
 add_subdirectory(doc)
 add_subdirectory(src)
-if(NOT ${DISABLE_TESTS})
+if(${BUILD_TESTING})
   add_subdirectory(tests)
 endif()
 if(${BUILD_BENCHMARKS})
