[observers] Make RunObservers and UpdateObservers controller-specific

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -7,18 +7,21 @@
 
   // Load and run state observers.
   // Order matters here, estimators will be run after each other.
-  // Only the estimators in the "UpdateObservers" list (see below) will affect
-  // the state of the real robot. The other estimators will only be run and logged, such that
-  // They may be used for comparison purposes.
-  //
+
   // Available estimators in mc_rtc are:
   // - "Encoder" : Estimate encoder position from sensor and velocity by finite differences
   // - "BodySensor" : Uses a BodySensor to compute the state of the floating base. This estimator will
   // typically be used to obtained groundtruth information (e.g the FloatingBase body sensor contains the groundtruth floating base state when running in choreonoid)
   // - KinematicInertial : Estimates the position and orientation of the floating base from the IMU orientation and assumed contacts. Note that this estimator requires to manually set the leftFootRatio  parameter to specify its anchor point, the default value is configured in-between the feet and is suitable for double-support only.
-  "EnabledObservers": ["Encoder", "BodySensor"],
-  // Update the real robot from these estimators
-  "UpdateObservers": ["Encoder", "BodySensor"],
+  //
+  // To run the observers, please add in your controller-specific configuration file
+  // "RunObservers": ["Encoder"],
+  // "UpdateObservers": ["Encoder"],
+  //
+  // Only the estimators in the "UpdateObservers" list (see below) will affect
+  // the state of the real robot. The other estimators will only be run and logged, such that
+  // They may be used for comparison purposes.
+  "EnabledObservers": ["Encoder", "BodySensor", "KinematicInertial"],
 
   // Specific configuration for each observer
   "Observers":
