[configuration] Change to *ModulePaths
- Remove *ModulePath option (redundant with *ModulePaths)
- Implement ClearObserverModulePath
- Fix a typo with ObserverModulePaths parsing

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -131,18 +131,17 @@
   // "UseSandbox": true
 
   // The following options are used to control the location of the
-  // controllers' and robots' modules (libraries)
+  // controllers', robots' and observers' modules (libraries)
   // The paths added by this option are added to the default path
-  //"ControllerModulePaths" : "/a/single/path/to/controller/directory/"
   //"ControllerModulePaths" : ["/one/path/to/controller/", "/another/path/"]
-  //"RobotModulePath" : "/a/single/path/to/robot/directory/"
   //"RobotModulePaths" : ["/one/path/to/robot/", "/another/path/"]
   //"ObserverModulePaths" : ["/one/path/to/observer/", "/another/path/"]
 
   // The following options are used to clear the default loading path
-  // for controllers and robots respectively
+  // for controllers, robots and observers respectively
   // This is only useful to run test on a machine where mc_rtc has
   // already been installed
   //"ClearControllerModulePath" : false
   //"ClearRobotModulePath" : false
+  //"ClearObserverModulePath": false
 }
