--- a/tests/controllers/mc_rtc.conf.in
+++ b/tests/controllers/mc_rtc.conf.in
@@ -18,5 +18,7 @@
   "ClearControllerModulePath" : true,
   "ControllerModulePaths" : ["@PYTHON_CONTROLLER_PATH@", "@TEST_CONTROLLER_PATH@"],
   "ClearRobotModulePath" : true,
-  "RobotModulePath" : "@ROBOT_MODULE_PATH@"
+  "RobotModulePaths" : ["@ROBOT_MODULE_PATH@"],
+  "ClearObserverModulePath": true,
+  "ObserverModulePaths": ["@OBSERVER_MODULE_PATH@"]
 }
