--- a/tests/controllers/mc_rtc.conf.in
+++ b/tests/controllers/mc_rtc.conf.in
@@ -4,6 +4,10 @@
 
   "Enabled"   : ["@TEST_CONTROLLER_NAME@"],
 
+  "EnabledObservers": [@ENABLED_OBSERVERS@],
+  "RunObservers": [@RUN_OBSERVERS@],
+  "UpdateObservers": [@UPDATE_OBSERVERS@],
+
   "PublishControlState" : false,
   "PublishRealState" : false,
 
