--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -135,6 +135,11 @@ if(${PYTHON_BINDING})
       set(ROBOT_MODULE_PATH "${ROBOT_MODULE_PATH}/$<CONFIGURATION>")
       set(TEST_CONTROLLER_PATH "${TEST_CONTROLLER_PATH}/$<CONFIGURATION>")
     endif()
+    if(WIN32)
+      set(PATH_SEP ";")
+    else()
+      set(PATH_SEP ":")
+    endif()
     set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/Test${PYTHON}/mc_rtc-Test${PYTHON}.conf")
     configure_file("${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in" "${CONFIG_OUT}")
     if(NOT DEFINED CMAKE_BUILD_TYPE)
@@ -143,7 +148,14 @@ if(${PYTHON_BINDING})
       file(GENERATE OUTPUT "${CONFIG_OUT}" INPUT "${CONFIG_IN}")
     endif()
     string(TOLOWER "${PYTHON}" PYTHON_LOWER)
-    add_test(NAME "Test${PYTHON}Controller" COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" 400 "" "${CMAKE_CURRENT_SOURCE_DIR}/test_python" WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/binding/python/mc_rtc/${PYTHON_LOWER}/$<CONFIGURATION>")
+    set(PYTHONPATH "${PROJECT_BINARY_DIR}/binding/python/mc_rtc/${PYTHON_LOWER}/$<CONFIGURATION>${PATH_SEP}${CMAKE_CURRENT_SOURCE_DIR}")
+    if(WIN32)
+      set(LDPATH_VAR "PATH")
+    else()
+      set(LDPATH_VAR "LD_LIBRARY_PATH")
+    endif()
+    set(LDPATH "$<TARGET_FILE_DIR:mc_control_fsm>")
+    add_test(NAME "Test${PYTHON}Controller" COMMAND ${CMAKE_COMMAND} -E env "PYTHONPATH=${PYTHONPATH}${PATH_SEP}$ENV{PYTHONPATH}" ${CMAKE_COMMAND} -E env "${LDPATH_VAR}=${LDPATH}${PATH_SEP}$ENV{${LDPATH_VAR}}" $<TARGET_FILE:test_controller_ticker> --run_test=RUN -- "${CONFIG_OUT}" 400 "")
     if(UNIX)
       add_test(Test${PYTHON}Log "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "${TEST_CONTROLLER_NAME}" 400 "${UTILS_BIN_DIR}")
     endif()
