--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,13 @@ macro(install_mc_rtc_lib MC_LIB)
   else()
     target_compile_options(${MC_LIB} PUBLIC "-mfpmath=sse" "-msse2")
   endif()
+  if(TREAT_WARNINGS_AS_ERRORS)
+    if(WIN32)
+      target_compile_options(${MC_LIB} PUBLIC $<BUILD_INTERFACE:/WX>)
+    else()
+      target_compile_options(${MC_LIB} PUBLIC $<BUILD_INTERFACE:-Werror>)
+    endif()
+  endif()
   if(GENERATE_COVERAGE)
     target_compile_options(${MC_LIB} PRIVATE "--coverage")
     set_target_properties(${MC_LIB} PROPERTIES LINK_FLAGS "--coverage")
