[Configuration] Load YAML files and YAML data
Closes #131

For YAML files, the choice is made based on the extension of the
provided file:
- .yml or .yaml files are loaded as YAML
- everything else is loaded as JSON

For YAML data:
- mc_rtc::Configuration::loadYAMLData will load YAML data in an existing
  Configuration
- mc_rtc::Configuration::fromYAMLData will construct a new Configuration
  from YAML data

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 variables:
   CI_TOOL: gitlab-ci
   APT_DEPENDENCIES: "cython python-pip python-coverage python-numpy python-nose libtinyxml2-dev libboost-all-dev libjsoncpp-dev libgeos++-dev libgeos-dev qhull-bin libqhull-dev libltdl-dev libtasks-qld-dev libmc-rbdyn-urdf-dev python-tasks python-mc-rbdyn-urdf python-enum34"
-  GIT_DEPENDENCIES: "git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/Tasks nanomsg/nanomsg humanoid-path-planner/hpp-spline"
+  GIT_DEPENDENCIES: "git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/Tasks nanomsg/nanomsg humanoid-path-planner/hpp-spline jbeder/yaml-cpp"
   GITE_PACKAGES: "multi-contact/eigen-lssol multi-contact/tasks-packaging#topic/CIPackaging multi-contact/mc_env_description#karim_drc"
   MASTER_PPA: "v-launchpad-jochen-sprickerhof-de/pcl hrg/daily"
   ROS_DISTRO: "indigo"
