--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,9 @@ add_subdirectory(3rd-party/qhull)
 # mpack (build static version)
 add_subdirectory(3rd-party/mpack)
 
+# yaml-cpp
+add_project_dependency(yaml-cpp 0.5.0 REQUIRED)
+
 # RapidJSON
 # The code was copied from the 1.1.0 release tarball for RapidJSON
 # https://github.com/miloyip/rapidjson
