--- a/doc/_data/features.yml
+++ b/doc/_data/features.yml
@@ -1,4 +1,4 @@
-- heading: "Simple tool for complex problems"
+- heading: "Simple tools for complex problems"
   desc: "Design a complex robotic applications on complex robots using simple graphical <a href=\"tools.html\">tools</a>."
   icon: "easy.svg"
 - heading: "Extensible interface"
