--- a/doc/_data/nav.yml
+++ b/doc/_data/nav.yml
@@ -1,14 +1,14 @@
 - name: "Overview"
-  page: "/index.html"
+  page: "index.html"
   id: "overviewDropdown"
   items:
     - name: "Interfaces"
-      page: "/interfaces.html"
+      page: "interfaces.html"
     - name: "Robots"
-      page: "/robots.html"
+      page: "robots.html"
 - name: "Tutorials"
-  page: "/tutorials.html"
+  page: "tutorials.html"
 - name: "Doxygen"
-  page: "/doxygen.html"
+  page: "doxygen.html"
 - name: "JSON documentation"
-  page: "/json.html"
+  page: "json.html"
