[doc] YAML examples are now YAML-y

--- a/doc/_examples/yaml/MetaTask/ComplianceTask.yaml
+++ b/doc/_examples/yaml/MetaTask/ComplianceTask.yaml
@@ -1,10 +1,6 @@
-{
-  "type": "compliance",
-  "robotIndex": 0,
-  "body": "r_arm",
-  "wrench":
-  {
-    "couple": [0.0, 0.0, 0.0],
-    "force": [0.0, 0.0, 0.0]
-  }
-}
+type: compliance
+robotIndex: 0
+body: r_arm
+wrench:
+  couple: [0.0, 0.0, 0.0]
+  force: [0.0, 0.0, 0.0]
