--- a/doc/_examples/yaml/mc_rbdyn/RobotModule.yaml
+++ b/doc/_examples/yaml/mc_rbdyn/RobotModule.yaml
@@ -1,5 +1,3 @@
-{
-  "path": "/path/to/robot",
-  "name": "robot",
-  "urdf_path": "urdf/robot.urdf"
-}
+path: /path/to/robot
+name: robot
+urdf_path: urdf/robot.urdf
