--- a/doc/_examples/yaml/MetaTask/LookAtTFTask.yaml
+++ b/doc/_examples/yaml/MetaTask/LookAtTFTask.yaml
@@ -1,8 +1,6 @@
-{
-  "type": "lookAtTF",
-  "robotIndex": 0,
-  "body": "bodyName",
-  "bodyVector": [1, 0, 0],
-  "sourceFrame": "robot_map",
-  "targetFrame": "target_name"
-}
+type: lookAtTF
+robotIndex: 0
+body: bodyName
+bodyVector: [1, 0, 0]
+sourceFrame: robot_map
+targetFrame: target_name
