--- a/doc/_examples/yaml/MetaTask/PositionTask.yaml
+++ b/doc/_examples/yaml/MetaTask/PositionTask.yaml
@@ -1,6 +1,4 @@
-{
-  "type": "position",
-  "robotIndex": 0,
-  "body": "bodyName",
-  "position": [0.0, 0.0, 0.0]
-}
+type: position
+robotIndex: 0
+body: bodyName
+position: [0.0, 0.0, 0.0]
