--- a/doc/_examples/yaml/SpaceVecAlg/RBInertiad.yaml
+++ b/doc/_examples/yaml/SpaceVecAlg/RBInertiad.yaml
@@ -1,7 +1,5 @@
-{
-  "mass": 0.0,
-  "momentum": [0.0, 0.0, 0.0],
-  "inertia": [1.0, 0.0, 0.0,
-              0.0, 1.0, 0.0,
-              0.0, 0.0, 1.0]
-}
+mass: 0.0
+momentum: [0.0, 0.0, 0.0]
+inertia: [1.0, 0.0, 0.0,
+          0.0, 1.0, 0.0,
+          0.0, 0.0, 1.0]
