--- a/doc/_examples/yaml/mc_rbdyn/PolygonInterpolator.yaml
+++ b/doc/_examples/yaml/mc_rbdyn/PolygonInterpolator.yaml
@@ -1,8 +1,5 @@
-{
-  "tuple_pairs": [
-    [ [0.0, 0.0], [0.0, 0.0] ],
-    [ [0.0, 0.0], [0.0, 0.0] ],
-    [ [0.0, 0.0], [0.0, 0.0] ],
-    [ [0.0, 0.0], [0.0, 0.0] ]
-  ]
-}
+tuple_pairs:
+  - [ [0.0, 0.0], [0.0, 0.0] ]
+  - [ [0.0, 0.0], [0.0, 0.0] ]
+  - [ [0.0, 0.0], [0.0, 0.0] ]
+  - [ [0.0, 0.0], [0.0, 0.0] ]
