--- a/doc/_examples/yaml/mc_rbdyn/RobotModuleGripper.yaml
+++ b/doc/_examples/yaml/mc_rbdyn/RobotModuleGripper.yaml
@@ -1,5 +1,3 @@
-{
-  "name": "l_gripper",
-  "joints": ["j0", "j1", "j2"],
-  "reverse_limits": false
-}
+name: l_gripper
+joints: [j0, j1, j2]
+reverse_limits: false
