--- a/doc/_examples/yaml/mc_rbdyn/Springs.yaml
+++ b/doc/_examples/yaml/mc_rbdyn/Springs.yaml
@@ -1,5 +1,3 @@
-{
-  "springsBodies": ["b0", "b1"],
-  "afterSpringsBodies": ["aB0", "aB1"],
-  "springsJoints": ["j0", "j1"]
-}
+springsBodies: [b0, b1]
+afterSpringsBodies: [aB0, aB1]
+springsJoints: [j0, j1]
